Fix layout breakage from super-long titles

--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -42,6 +42,8 @@ body.home > .main > .sizer {
 
 .card-title {
   z-index: 2;
+  word-wrap: break-word;
+  width: 100%;
 }
 
 .card-image {
@@ -50,6 +52,13 @@ body.home > .main > .sizer {
 
 .card-image .entry-title a {
   color: white;
+}
+
+.card-image .card-title {
+  margin: 0;
+  max-height: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .card-image::after {
